<resources>
    <string name="app_name">إنجاز</string>
    <string name="Btn_sign_up">انضم للتطبيق</string>
    <string name="abstraction">مرحباُ ..انا انجاز ، هل تبحث عن عمل ،، هل لديك ماتريد إنجازة ،، هيا أطلب مني المساعدة .... لنجرب إذن</string>

    <!--Spinner array-->
    <string-array name="dept">
        <!--0-->
        <item>اختر احد المجالات..</item>
        <!--1-->
        <item>كهربائي</item>
        <!--2-->
        <item>ميكانيكي</item>
        <!--3-->
        <item>معمار</item>
        <!--4-->
        <item>تكييف</item>
        <!--5-->
        <item>سباك</item>
        <!--6-->
        <item>نقاشة</item>
        <!--7-->
        <item>حدادة</item>
        <!--8-->
        <item>ستلايت</item>
        <!--9-->
        <item>صيانة بوتوجاز</item>
        <!--10-->
        <item>صيانة الكمبيوتر</item>
        <!--11-->
        <item>ترجمة إنجليزي</item>
        <!--12-->
        <item>مشرف مجموعة نظافة</item>
        <!--13-->
        <item>مقاول عمال</item>
        <!--14-->
        <item>سمسار سيارات</item>
        <!--15-->
        <item>منظف سيارات</item>
        <!--16-->
        <item>استشاري صحة وجمال(نساء)</item>
        <!--17-->
        <item>معلم لغة انجليزية</item>
        <!--18-->
        <item>معلم أساسيات حاسوب</item>
        <!--19-->
        <item>ترجمة فرنسي</item>
        <!--20-->
        <item>تطوير مواقع الانترنت</item>
        <!--21-->
        <item>تطوير تطبيقات Desktop</item>
        <!--22-->
        <item>تطوير تطبيقات Android</item>
        <!--23-->
        <item>تطوير تطبيقات IOS</item>
        <!--24-->
        <item>طباعة</item>


    </string-array>
    <!--Gender string-->
    <string-array name="gender">
        <item>اختر النوع...</item>
        <item>ذكر</item>
        <item>أنثى</item>
    </string-array>
<string name="aboutHint">
        أوصف نفسك هنا
    </string>
    <string name="about1">
        تطبيق إنجاز بوابتك للعمل الحر، تستطيع من خلال التطبيق ان تطلب من ترغب به لصيانة أثاثاتك أو اجهزتك المنزلية الالكترونية والكهربائية وغيرها،يتيح التطبيق تصفح العمال والمهرة المتاحين في القسم الذي تطلبه وكذلك يمكنك إختيار الاقرب من خلال خاصية الخرائط التي يوفرها التطبيق

    </string>
    <string name="about2">اذا كنت تمتلك حرفة أو مهنة ما، يكمنك زيادة دخلك بالتسجيل في التطبيق وتحديث موقعك ليتمكن الجميع من الوصول اليك، وطلب المساعده منك لتنجز لهم مهامهم</string>
    <string name="about3">
        نسعي لنوفر لك خدمة أسهل وأسرع
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="gw">أعمال GW للمقاولات، هي الراعي الرسمي لتطبيق انجاز ومن مجالاتنا ايضا</string>
    <string name="contactus">للتواصل</string>
    <string name="contactus2">2</string>
    <string name="ourscop">تنفيذ برامج  - تصميم وتنفيذ شبكات الحاسوب - صيانة جميع أنواع المولدات والمحركات الكهربائية - التمديدات الكهربائية للمنشآت والمباني - صيانة جميع الأجهزة الكهربائية واللوحات الإلكترونية - صيانة جميع المكيفات - صيانة طابعات الليزر والـUV - صيانة ماكينات CNC</string>
    <string name="Builder_U_AV">يتوفر تحديث جديد، هل تريد التنزيل؟</string>
    <string name="Builder_U_N_AV">لايتوفر تحديث جديد، تحديث البرنامج يضيف ميزات أكثر ويجعل التطبيق أكثر سهولة واستخدام...</string>
    <string name="thanena">تهانينا، تم التسجيل بنجاح، اضغط موافق لإكمال التسجل..</string>
</resources>
