<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.altayeb.injaz.AboutApp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:nestedScrollingEnabled="false"
        android:transitionGroup="false">
    <LinearLayout
        android:gravity="right"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">
        <TextView
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="تطبيق انجاز"
            android:id="@+id/txt_ingaz"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@color/white" />
        <View
            android:layout_width="200dp"
            android:layout_height="5dp"
            android:background="#00ff8c"
            />
        <LinearLayout
            android:gravity="center"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">
            <TextView
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingaz V 1.0"
                android:id="@+id/txt_ingaz4"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="italic"
                android:background="#2c07fa" />
        </LinearLayout>
        <TextView
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about1"
            android:id="@+id/txt_ingaz1"
            android:textSize="20dp"
            android:textColor="@color/white" />
        <TextView
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about2"
            android:id="@+id/txt_ingaz2"
            android:textSize="20dp"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about3"
            android:id="@+id/txt_ingaz3"
            android:textSize="20dp"
            android:textColor="#00ff8c"
            android:gravity="center"
            android:paddingTop="50dp"
            android:paddingBottom="20dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/updating"
            android:text="البحث عن تحديث البرنامج"
            android:paddingBottom="10dp"/>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
